--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.0",
+    "reactjs-popup": "^2.0.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
