--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.6.8",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "reactjs-popup": "^2.0.6",
